# ChalametPIR

./: Cargo.toml  README.md
.github/workflows/: test_ci.yml
benches/: offline_phase.rs  online_phase.rs
chalamet_pir_client/: Cargo.toml  README.md
chalamet_pir_client/examples/: client.rs
chalamet_pir_client/src/: client.rs  lib.rs
chalamet_pir_common/: Cargo.toml  README.md
chalamet_pir_common/src/: utils.rs
chalamet_pir_server/: Cargo.toml  README.md
chalamet_pir_server/examples/: server.rs
chalamet_pir_server/src/: lib.rs  server.rs
chalamet_pir_server/src/gpu/: gpu_utils.rs  mat_transpose_shader.rs
chalametpir_client/: Cargo.toml  README.md
chalametpir_client/examples/: client.rs
chalametpir_client/src/: client.rs  lib.rs
chalametpir_common/: Cargo.toml  README.md
chalametpir_common/src/: binary_fuse_filter.rs  branch_opt_util.rs  error.rs  lib.rs  matrix.rs  serialization.rs  utils.rs
chalametpir_server/: Cargo.toml  README.md
chalametpir_server/examples/: server.rs
chalametpir_server/src/: lib.rs  server.rs
chalametpir_server/src/gpu/: gpu_utils.rs  mod.rs
examples/: kw_pir.rs
integrations/: Cargo.toml
integrations/benches/: offline_phase.rs  online_phase.rs
integrations/src/: lib.rs  main.rs  test_pir.rs
shaders/: mat_transpose.glsl  mat_x_mat.glsl  vec_x_mat.glsl
src/: binary_fuse_filter.rs  client.rs  lib.rs  matrix.rs  serialization.rs  server.rs  test_pir.rs
src/pir_internals/: binary_fuse_filter.rs  branch_opt_util.rs  error.rs  gpu.rs  mat_x_mat_shader.rs  matrix.rs  mod.rs  params.rs  serialization.rs  vec_x_mat_shader.rs
