[workspace]
members = [
    "chalametpir_client",
    "chalametpir_common",
    "chalametpir_server",
    "integrations",
]
resolver = "3"

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = "thin"
panic = "abort"

[profile.test-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
