[package]
name = "chalamet_pir_client"
version = "0.6.0"
edition = "2024"
resolver = "3"
rust-version = "1.85.0"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "Client Implementation of ChalametPIR: Simple, Stateful, Single-Server Private Information Retrieval for Key-Value Databases"
readme = "../README.md"
repository = "https://github.com/itzmeanjan/ChalametPIR.git"
license = "MPL-2.0"
keywords = [
    "priv-info-retrieval",
    "lwe-pir",
    "frodo-pir",
    "chalamet-pir",
    "pir-server",
    "key-value-databases",
]
categories = ["cryptography", "data-structures", "concurrency"]

[dependencies]
chalamet_pir_common = { path = "../chalamet_pir_common", version = "=0.6.0" }

[dev-dependencies]
tokio = { version = "=1.45.0", features = ["full"] }

[features]
mutate_internal_client_state = []
