[package]
name = "chalametpir_client"
version = "0.6.0"
edition = "2024"
resolver = "3"
rust-version = "1.85.0"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "Client Implementation of ChalametPIR: Simple, Stateful, Single-Server Private Information Retrieval for Key-Value Databases"
readme = "README.md"
repository = "https://github.com/itzmeanjan/ChalametPIR.git"
license = "MPL-2.0"
keywords = [
    "priv-info-retrieval",
    "lwe-pir",
    "frodo-pir",
    "chalamet-pir",
    "pir-server",
    "key-value-databases",
]
categories = ["cryptography", "data-structures", "concurrency"]

[dependencies]
chalametpir_common = { path = "../chalametpir_common", version = "=0.6.0", default-features = false }

[dev-dependencies]
tokio = { version = "=1.45.0", features = ["full"] }

[features]
wasm = ["chalametpir_common/wasm"]
default = ["chalametpir_common/default"]
mutate_internal_client_state = []
