[package]
name = "chalametpir_common"
version = "0.6.0"
edition = "2024"
resolver = "3"
rust-version = "1.85.0"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "Common Utilities for ChalametPIR: Private Information Retrieval for Key-Value Databases"
readme = "../README.md"
repository = "https://github.com/itzmeanjan/ChalametPIR.git"
license = "MPL-2.0"
keywords = [
    "priv-info-retrieval",
    "lwe-pir",
    "frodo-pir",
    "chalamet-pir",
    "gpu",
]
categories = ["cryptography", "data-structures", "concurrency"]

[dependencies]
turboshake = "=0.4.1"
rand = { version = "=0.9.1", optional = true }
rand_chacha = { version = "=0.9.0", optional = true }
rayon = "=1.10.0"
tinyrand = { version = "=0.5.0", optional = true }

[dev-dependencies]
test-case = "=3.3.1"

[features]
wasm = ["dep:tinyrand"]
default = ["dep:rand", "dep:rand_chacha"]
