[package]
name = "chalametpir_server"
version = "0.6.0"
edition = "2024"
resolver = "3"
rust-version = "1.85.0"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "Server Implementation of ChalametPIR: Simple, Stateful, Single-Server Private Information Retrieval for Key-Value Databases"
readme = "README.md"
repository = "https://github.com/itzmeanjan/ChalametPIR.git"
license = "MPL-2.0"
keywords = [
    "priv-info-retrieval",
    "lwe-pir",
    "frodo-pir",
    "chalamet-pir",
    "gpu",
    "pir-server",
    "key-value-databases",
]
categories = ["cryptography", "data-structures", "concurrency"]

[dependencies]
chalametpir_common = { path = "../chalametpir_common", version = "=0.6.0" }
vulkano = { version = "=0.35.1", optional = true }
vulkano-shaders = { version = "=0.35.0", optional = true }

[dev-dependencies]
rand = "=0.9.1"
rand_chacha = "=0.9.0"
tokio = { version = "=1.45.0", features = ["full"] }

[features]
gpu = ["dep:vulkano", "dep:vulkano-shaders"]
